styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

section {
  background: linear-gradient(to bottom, #4b1ed3, #180061);
}

/*

LANDING PAGE 

*/

.header {
  position: absolute;
  top: 40%;
  left: 40%;
  transform: translate(-50%, -50%);
  width: 100%;
  max-width: 1000px;
  display: flex;
  justify-content: space-between;
}

#landing-page {
  min-height: 100vh;
}

.title {
  position: relative;
  font-size: 110px;
  text-transform: capitalize;
  color: transparent;
  -webkit-text-stroke: 1px #ffffff;
  cursor: default;
}

.title::before {
  content: attr(data-fill-text);
  position: absolute;
  width: 0%;
  height: 100%;
  color: #ffffff;
  -webkit-text-stroke: 0px transparent;
  overflow: hidden;
  transition: width 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.title:hover::before {
  width: 100%;
}

.title--secondary {
  font-size: 40px;
  font-weight: 400;
}

.bg-img {
  width: 100%;
  height: 100%;
  max-width: 850px;
  max-height: 850px;
  position: fixed;
  right: 10%;
  top: 10%;
  filter: opacity(0.5);
}

/*

SEARCH BUTTON

*/

#mysearch {
  font-size: 20px;
}

.search {
  position: relative;
  width: 60px;
  height: 60px;
  background: #ffffff;
  border-radius: 60px;
  transition: 0.5s;

  overflow: hidden;
}

.search.active {
  width: 500px;
}

.search .icon {
  position: absolute;
  top: 0;
  left: 0;
  width: 60px;
  height: 60px;
  background: #ffffff;
  border-radius: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
  cursor: pointer;
}

.search .icon::before {
  content: "";
  position: absolute;
  width: 15px;
  height: 15px;
  border: 3px solid #3500d3;
  border-radius: 50%;
  transform: translate(-4px, -4px);
}

.search .icon::after {
  content: "";
  position: absolute;
  width: 3px;
  height: 12px;
  background: #3500d3;
  transform: translate(6px, 6px) rotate(315deg);
}

.search .input {
  position: relative;
  width: 300px;
  height: 60px;
  left: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search .input input {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  font-size: 20;
  padding: 10px 0;
}

.clear {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 15px;
  height: 15px;
  right: 15px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
}

.clear::before {
  position: absolute;
  content: "";
  width: 1px;
  height: 15px;
  background-color: #999;
  transform: rotate(45deg);
}

.clear::after {
  position: absolute;
  content: "";
  width: 1px;
  height: 15px;
  background-color: #999;
  transform: rotate(315deg);
}
/* ... */

